--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
           <!-- Contact Information -->
           <div class="contact-info" data-aos="fade-left">
             <div class="contact-info-wrapper">
-              <h3 id="centre">Contact Information</h3>
+              <h3>Contact Information</h3>
               
               <div class="contact-details">
                 <div class="contact-detail">
